Add frontend: landing, about, pricing

--- a/public/index.html
+++ b/public/index.html
@@ -85,6 +85,7 @@
     <a href="#">Home</a>
     <a href="#about">About</a>
     <a href="#pricing">Pricing</a>
+    <a href="#aibot">AI Bot</a>
   </nav>
 
   <section class="hero">
@@ -113,4 +114,16 @@
       </div>
       <div class="card">
         <h3>Enterprise</h3>
-        <p>$99.99
+        <p>$99.99/mo</p>
+        <p>Custom integrations + priority support</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="section" id="aibot">
+    <h2>AI Email Assistant</h2>
+    <p>Our AI-powered assistant helps you automatically respond to customer emails. Just provide your business details and let the bot handle FAQs, booking requests, and service inquiries.</p>
+    <button onclick="alert('AI Bot feature coming soon!')">Try It</button>
+  </section>
+</body>
+</html>
