--- a/public/index.html
+++ b/public/index.html
@@ -78,6 +78,23 @@
     .card p {
       font-size: 18px;
     }
+    .btn {
+      background-color: white;
+      color: #0056b3;
+      border: none;
+      padding: 12px 25px;
+      border-radius: 10px;
+      font-size: 16px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      margin-top: 20px;
+    }
+    .btn:hover {
+      background-color: #ffffffcc;
+      transform: translateY(-2px);
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+    }
   </style>
 </head>
 <body>
@@ -91,7 +108,7 @@
   <section class="hero">
     <h1>AI Business Assistant</h1>
     <p>Supercharge your business operations with AI solutions.</p>
-    <button>Get Started</button>
+    <button class="btn">Get Started</button>
   </section>
 
   <section class="section" id="about">
@@ -123,7 +140,7 @@
   <section class="section" id="aibot">
     <h2>AI Email Assistant</h2>
     <p>Our AI-powered assistant helps you automatically respond to customer emails. Just provide your business details and let the bot handle FAQs, booking requests, and service inquiries.</p>
-    <button onclick="alert('AI Bot feature coming soon!')">Try It</button>
+    <button class="btn" onclick="alert('AI Bot feature coming soon!')">Try It</button>
   </section>
 </body>
 </html>
